@@ -1,5 +1,7 @@
 camlheader
+target_camlheader
 camlheaderd
+target_camlheaderd
 camlheader_ur
 labelled-*
 caml
