@@ -62,7 +62,8 @@ Runtime:
 
 Build system:
 - PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
-  
+- PR#6266: Cross compilation for iOs, Android etc
+
 Bug fixes:
 - PR#5271: Location.prerr_warning is hard-coded to use Format.err_formatter
   (Damien Doligez, report by Rolf Rolles)
